# full-stack-ai-challenge

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  DOCKER.md  Dockerfile  MODEL_DOCUMENTATION.md  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
data/: anomaly_results.json  drift_results.json  feature_importance.json
models/categorization/: label_encoder.pkl  preprocessor.pkl  pytorch_category.pth  xgboost_category.pkl
scripts/: analyze_data_quality.py  analyze_feature_importance.py  build_hybrid_rag.py  demo_api.py  generate_architecture_diagram.py  prepare_data.py  run_anomaly_detection.py  run_drift_detection.py  tune_n_estimators.py
src/: config.py
src/api/: main.py
src/data/: __init__.py  loader.py  pipeline.py  schemas.py  splitter.py  validator.py
src/features/: __init__.py  preprocessing.py
src/models/anomaly/: __init__.py  detector.py
src/models/categorization/: __init__.py  model_loader.py  train_dl.py  train_traditional.py
src/models/monitoring/: __init__.py  drift_detector.py
src/models/retrieval/: __init__.py  hybrid_rag.py
src/utils/: logger.py
