[project]
name = "intelligent-support-system"
version = "0.1.0"
description = "Intelligent Product Support System with ML-powered categorization, RAG retrieval, and anomaly detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML/DL frameworks
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "tensorflow>=2.15.0",
    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    # Feature store & MLOps
    "feast>=0.38.0",
    "mlflow>=2.10.0",
    "dvc>=3.48.0",
    # RAG & Vector DB
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "faiss-cpu>=1.7.4",
    # Graph databases
    "neo4j>=5.17.0",
    "networkx>=3.2",
    # API & Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # Monitoring & observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "ipython>=8.21.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
